# i2c-scanner

./: Cargo.toml  README.md
src/: lib.rs  seven_bit.rs  ten_bit.rs
